# mlops4aisystems

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  cml-repos.txt  get_repo_list.py  list_of_GH_projects.py  main.py  models.py  pyproject.toml  requirements-dev.txt  requirements.txt  settings.json
actions4DS/: analyze_workflows.py  config.py  get_repo_list.py  main.py  models.py  scrape_repos.py
notebooks/: Final analysis (with preliminary notes).ipynb  Final analysis.ipynb  query_by_iterativeAI.ipynb  reporeapers-analytics.ipynb
tests/assets/: repo_slugs.json
