[tool.poetry]
name = "GitHubActions4DS"
version = "0.1.0"
description = "Replication package for the CAIN 2022 experimentation"
authors = ["Collab <http://collab.di.unba.it>"]
license = "MIT"
include = ["LICENSE",]

[tool.poetry.dependencies]
python = "^3.8"
PyGithub = "^1.55"
requests = "^2.27.0"
pandas = "^1.3.5"
python-dotenv = "^0.19.2"
tqdm = "^4.62.3"
"ruamel.yaml" = "^0.17.20"
rich = "^10.16.2"
pretty-errors = "^1.2.25"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
flake8 = "^4.0.1"
black = "^21.12b0"
pylint = "^2.12.2"
mypy = "^0.920"
bandit = "^1.7.1"
pre-commit = "^2.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 88

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.mypy]
ignore_missing_imports = true

[tool.bandit]
skips = ["B104","B610","B611","B702","B703"]

[tool.pydocstyle]
ignore = "D104,D203,D213,D406,D407,D413"
